src/snapshots/din__parser__test_valid_arithmetic_precedence__add_sub.snap
---
source: src/parser.rs
expression: tree
---
main_function:
  statement:
    Return:
      Binary:
        op: Add
        l:
          Num: 9
        r:
          Binary:
            op: Sub
            l:
              Num: 10
            r:
              Num: 3

