src/snapshots/din__parser__test_valid_arithmetic_precedence__mult_add.snap
---
source: src/parser.rs
expression: tree
---
main_function:
  statement:
    Return:
      Binary:
        op: Add
        l:
          Binary:
            op: Mult
            l:
              Num: 9
            r:
              Num: 10
        r:
          Num: 11

